--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
-{\n  "name": "betting-dapp",\n  "version": "1.0.0",\n  "description": "A betting decentralized application.",\n  "scripts": {\n    "test": "hardhat test",\n    "deploy": "hardhat run scripts/deploy.ts"\n  },\n  "dependencies": {\n    "@nomiclabs/hardhat-ethers": "^2.0.0",\n    "ethers": "^5.0.0"\n  },\n  "devDependencies": {\n    "hardhat": "^2.0.0"\n  }\n}
+{
+  "name": "betting-dapp",
+  "version": "1.0.0",
+  "description": "A betting decentralized application.",
+  "scripts": {
+    "test": "hardhat test",
+    "deploy": "hardhat run scripts/deploy.ts"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "ethers": "^5.0.0"
+  },
+  "devDependencies": {
+    "hardhat": "^2.0.0"
+  }
+}
